# ml_sandbox

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  justfile  main_nb.py  main_workflow.ipynb  main_workflow.py  ml_df.txt  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
docs/: index.md  installation.md  usage.md
src/gui/: gui.py  load_data.py  machine_learning.py  requirements.txt  results.py  stats.py  utils.py
src/ml_template/: __init__.py  core.py
tests/: __init__.py  test_ml_template.py
