[project]
name = "ml_template"
version = "0.1.0"
description = "Template for using ML in notebooks and as streamlit app"
readme = "README.md"
authors = [
  {name = "Sebastian Nied", email = "sebastian.nied@umweltbundesamt.at"}
]
maintainers = [
  {name = "Sebastian Nied", email = "sebastian.nied@umweltbundesamt.at"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer",
  "scikit-learn",
  "pandas",
  "xgboost"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/basnied/ml_template/issues"
changelog = "https://github.com/basnied/ml_template/blob/master/changelog.md"
homepage = "https://github.com/basnied/ml_template"

[project.scripts]
ml_template = "ml_template.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
