[project]
name = "ml_template"
version = "0.1.0"
description = "Template for using ML in notebooks and as streamlit app"
readme = "README.md"
license = "MIT"
authors = [
  {name = "Sebastian Nied", email = "sebastian.nied@umweltbundesamt.at"}
]
maintainers = [
  {name = "Sebastian Nied", email = "sebastian.nied@umweltbundesamt.at"}
]
requires-python = ">=3.11, <=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "polars>=1.38.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "shap>=0.50.0",
    "statsmodels>=0.14.6",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "xgboost>=3.2.0",
]
